hphp/test/quick/builtin_extension_DateTime.php.expectf
DateTime
object(DateTime)#1 (0) {
}
string(19) "O:8:"DateTime":0:{}"
object(DateTime)#2 (0) {
}
array(16) {
  [0]=>
  string(3) "add"
  [1]=>
  string(11) "__construct"
  [2]=>
  string(16) "createFromFormat"
  [3]=>
  string(4) "diff"
  [4]=>
  string(6) "format"
  [5]=>
  string(13) "getLastErrors"
  [6]=>
  string(9) "getOffset"
  [7]=>
  string(12) "getTimestamp"
  [8]=>
  string(11) "getTimezone"
  [9]=>
  string(6) "modify"
  [10]=>
  string(7) "setDate"
  [11]=>
  string(10) "setISODate"
  [12]=>
  string(7) "setTime"
  [13]=>
  string(12) "setTimestamp"
  [14]=>
  string(11) "setTimezone"
  [15]=>
  string(3) "sub"
}
================
A_DateTime
HipHop Warning: DateInterval::__construct() expects exactly 1 parameter, 0 given in %s on line 26
object(A_DateTime)#3 (1) {
  ["___x"]=>
  NULL
}
string(35) "O:10:"A_DateTime":1:{s:4:"___x";N;}"
object(A_DateTime)#4 (1) {
  ["___x"]=>
  NULL
}
array(6) {
  [0]=>
  string(7) "__clone"
  [1]=>
  string(11) "__construct"
  [2]=>
  string(5) "__get"
  [3]=>
  string(5) "__set"
  [4]=>
  string(20) "createFromDateString"
  [5]=>
  string(6) "format"
}
================
HipHop Fatal error: timelib too old is not implemented yet. in %s on line 16
